--- a/assests/css/dashboard.css
+++ b/assests/css/dashboard.css
@@ -28,7 +28,9 @@ body {
 }
 
 table {
-  font-size: 14px;
+  font-size: 13px;
+  font-weight: 600;
+  font-family: "Raleway", sans-serif;
 }
 
 /*
@@ -129,3 +131,42 @@ table {
   color: #fff;
   text-align: center;
 }
+
+@-webkit-keyframes slideDown {
+    0%, 100% { -webkit-transform: translateY(-100px); }
+    10%, 90% { -webkit-transform: translateY(0px); }
+}
+@-moz-keyframes slideDown {
+    0%, 100% { -moz-transform: translateY(-50px); }
+    10%, 90% { -moz-transform: translateY(0px); }
+}
+
+#taskCreationStatus {
+  display: none;
+  position: absolute;
+  z-index: 101;
+  top: 0;
+  left: 0;
+  right: 0;
+  background: #fde073;
+  text-align: center;
+  line-height: 2.5;
+  overflow: hidden; 
+  -webkit-box-shadow: 0 0 5px black;
+  -moz-box-shadow:    0 0 5px black;
+  box-shadow:         0 0 5px black;
+  -webkit-transform: translateY(-50px);
+  -webkit-animation: slideDown 2.5s 1.0s 1 ease forwards;
+
+}
+
+.cssanimations .csstransforms #taskCreationStatus {
+    -moz-transform:    translateY(-50px);
+    -moz-animation:    slideDown 2.5s 1.0s 1 ease forwards;
+}
+
+.cssanimations .csstransforms #close {
+  display: none;
+}
+
+
