--- a/notification_system/public/css/dashboard.css
+++ b/notification_system/public/css/dashboard.css
@@ -8,24 +8,31 @@
 body {
     font-family: 'Raleway', sans-serif;
     padding-top: 50px;
-    font-size: 13px;
+    font-size: 1.5em;
+/*    background-color: #00BFA5;*/
+
 }
 
-/*html,
-body {
+.jumbotron {
     background-color: #fff;
-    color: #636b6f;
-    font-family: 'Raleway', sans-serif;
-    font-weight: 100;
-
-    height: 100vh;
-    margin: 0;
+    margin: 0px;
 }
-*/
+
+.jumbotron p {
+    font-weight:500;
+    /*font-size: 1.1em;*/
+}
+
+#task-text {
+    font-size: 2em;
+}
 
 footer {
     text-align: center;
     padding: 30px;
+    /*background-color: #00BFA5;*/
+    color: #000;
+    font-weight: bold;
 }
 
 ::-webkit-scrollbar {
@@ -39,7 +46,7 @@ footer {
 
 ::-webkit-scrollbar-thumb {
     -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.5);
-    background-color: #000;
+    background-color: #00BFA5;
 }
 
 
@@ -62,11 +69,26 @@ footer {
     border: 0;
 }
 
-table {
-    font-size: 1em;
-    font-weight: 600;
-    /*font-family: "Raleway", sans-serif;*/
+.navbar-inverse {
+    background-color: #00BFA5;
+    color: #fff;
+    font-weight: 500;
 }
+
+.navbar-inverse .navbar-brand {
+    color: #fff;
+}
+
+.navbar-inverse .navbar-nav>li>a {
+    color: #fff;
+}
+
+table {
+    font-size: 0.9em;
+    /*font-weight: 500;*/
+    font-family: "Open Sans", sans-serif;
+}
+
 
 
 /*
@@ -78,6 +100,7 @@ table {
 
 .sidebar {
     display: none;
+    background-color: #fff;
 }
 
 @media (min-width: 768px) {
@@ -92,8 +115,7 @@ table {
         overflow-x: hidden;
         overflow-y: auto;
         /* Scrollable contents if viewport is shorter than content. */
-        background-color: #f5f5f5;
-        border-right: 1px solid #eee;
+        border-right: 3px solid #00BFA5;
     }
 }
 
@@ -105,6 +127,7 @@ table {
     /* 20px padding + 1px border */
     margin-bottom: 20px;
     margin-left: -20px;
+
 }
 
 .nav-sidebar > li > a {
@@ -116,7 +139,7 @@ table {
 .nav-sidebar > .active > a:hover,
 .nav-sidebar > .active > a:focus {
     color: #fff;
-    background-color: #428bca;
+    background-color: #00BFA5;
 }
 
 
@@ -174,11 +197,20 @@ table {
     color: #fff;
     padding: 20px;
     width: 100%;
+    border: 2px solid #fff;
+    border-radius: 10px;
 }
 
 .thumbnail .caption {
     color: #fff;
     text-align: center;
+}
+
+.thumbnail:hover {
+    transition: 0.5s;
+    background-color: #fff;
+    color: #34495e;
+    border: 2px solid #34495e;
 }
 
 @-webkit-keyframes slideDown {
@@ -207,18 +239,22 @@ table {
     display: none;
     position: absolute;
     z-index: 101;
-    top: -15;
+    top: -10;
     left: 0;
     right: 0;
-    background: #fde073;
+    background-color: #5cb85c;
+    color: #fff;
     text-align: center;
     line-height: 2.5;
     overflow: hidden;
     -webkit-box-shadow: 0 0 5px black;
     -moz-box-shadow: 0 0 5px black;
     box-shadow: 0 0 5px black;
-    -webkit-transform: translateY(0px);
     -webkit-animation: slideDown 2.5s 1.0s 1 ease forwards;
+}
+
+#taskCreationStatus a {
+    color: #fff;
 }
 
 .cssanimations .csstransforms #taskCreationStatus {
@@ -229,7 +265,6 @@ table {
 .cssanimations .csstransforms #close {
     display: none;
 }
-
 
 .full-height {
     height: 70vh;
@@ -273,14 +308,75 @@ table {
     margin-bottom: 30px;
 }
 
+
 /* Content Loading Spinner */
+
 #loading {
-    background: url(../img/hourglass.svg) center no-repeat rgba(255,255,255,0.85);
+    background: url(../img/hourglass.svg) center no-repeat rgba(255, 255, 255, 0.85);
     height: 100%;
     left: 0px;
     position: fixed;
     top: 0px;
     width: 100%;
     z-index: 9999;
-    display:none;
+    display: none;
+}
+
+#information-jumbotron {
+    border-top: 5px solid #00BFA5;
+    border-bottom: 5px solid #00BFA5;
+    background-color: #E0F2F1;
+    margin-top: none;
+    margin-bottom: none;
+    padding: none;
+}
+
+.custom-center {
+    text-align: center;
+}
+
+#main-jumbotron {
+    background-color: #fff;
+    background-image: linear-gradient( rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), url(../img/hero.jpg);
+    background-size: cover;
+    padding-top: 20vh;
+    height: 80vh;
+    margin-bottom: 0px;
+    font-family: 'Montserrat', sans-serif;
+    text-transform: uppercase;
+}
+
+#main-jumbotron .text-content{
+    font-weight: bold;
+    color: #fff;
+    padding: 30px;
+    margin: 10px;
+}
+
+#features-jumbotron {
+    background-color: #fff;
+}
+
+#slogan-jumbotron {
+    background-color: #277f71;
+    color: #fff;
+    border-top: 10px solid #00BFA5;
+    padding: 10px;
+}
+
+.custom-btn {
+    background-color: #00BFA5;
+    color: #fff;
+    border: none;
+}
+
+.modal-header {
+    background-color: #448AFF;
+    color: #fff;
+}
+
+.panel-default>.panel-heading {
+    background-color: #00BFA5;
+    color: #fff;
+    font-weight: bold;
 }
