--- a/public/css/animate.css
+++ b/public/css/animate.css
@@ -652,22 +652,22 @@ THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLI
 }
 @-webkit-keyframes fadeIn {
 	0% {opacity: 0;}	
-	100% {opacity: 1;}
+	100% {opacity: 1; visibility: visible;}
 }
 
 @-moz-keyframes fadeIn {
 	0% {opacity: 0;}	
-	100% {opacity: 1;}
+	100% {opacity: 1; visibility: visible;}
 }
 
 @-o-keyframes fadeIn {
 	0% {opacity: 0;}	
-	100% {opacity: 1;}
+	100% {opacity: 1; visibility: visible;}
 }
 
 @keyframes fadeIn {
 	0% {opacity: 0;}	
-	100% {opacity: 1;}
+	100% {opacity: 1; visibility: visible;}
 }
 
 .fadeIn {
