--- a/public/css/basic.css
+++ b/public/css/basic.css
@@ -1,28 +1,34 @@
 /*
- * Base structure of all webpages
+ * Base structure of all webpages for Task Notification System
  */
 
-html, body {
-    font-family: 'Montserrat', sans-serif;
-    
+html,
+body {
     /* Text */
+    font-family: 'Montserrat', sans-serif;
     font-size: 1em;
     letter-spacing: -0.04em;
-    /*background-color: #00BFA5;*/
-
 }
 
 body {
-    padding-top: 50px;
+    /* Display & Box Model */
+    /*padding-top: 50px;*/
 }
 
 footer {
-    text-align: center;
-    padding: 30px;
-    /*background-color: #00BFA5;*/
+    /* Text */
+    /*font-weight: bold;*/
+    text-align: right;
+
+    /* Display & Box Model */
+    padding: 5px;
+
+    /* Background & Color */
     color: #000;
-    font-weight: bold;
 }
+
+
+/* Scrollbar Styling */
 
 ::-webkit-scrollbar {
     width: 6px;
@@ -38,55 +44,76 @@ footer {
     background-color: #00BFA5;
 }
 
-/*
- * Global add-ons
- */
-
 .jumbotron {
+    /* Background & Color */
     background-color: #fff;
 }
 
 .sub-header {
-    padding-bottom: 10px;
+    /* Display & Box Model */
     border-bottom: 1px solid #eee;
+    padding-bottom: 10px;
 }
 
-/*
- * Top navigation
- * Hide default border to remove 1px line.
- */
+
+/* Navbar Styling */
+
+.navbar {
+    /* Text */
+    font-size: 0.8em;
+}
+
+.navbar-brand {
+    /* Text */
+    font-size: 1.2em;
+}
 
 .navbar-fixed-top {
+    /* Display & Box Model */
     border: 0;
 }
 
 .navbar-inverse {
-    background-color: #000;
-    color: #fff;
+    /* Display & Box Model */
+    background-color: rgba(0,0,0,0.2);
+    color: #000;
+
+    /* Text */
     font-weight: 500;
 }
 
 .navbar-inverse .navbar-brand {
+    /* Background & Color */
     color: #fff;
 }
 
 .navbar-inverse .navbar-nav>li>a {
+    /* Background & Color */
     color: #fff;
 }
 
+
 /* Custom Buttons */
+
 .custom-btn {
+    /* Background & Color */
     background-color: #00BFA5;
-    border-color: #00BFA5;
     color: #fff;
+
+    /* Display & Box Model */
+    border-color: #00BFA5;
     transition: 0.75s ease-in-out;
 }
 
 .custom-btn:hover {
+    /* Background & Color */
     background-color: #fff;
     color: #00BFA5;
+
+    /* Text */
     font-weight: bold;
+
+    /* Display & Box Model */
     border-color: #00BFA5;
     transition: 0.75s ease-in-out;
 }
-
